--- a/layouts/partials/design.html
+++ b/layouts/partials/design.html
@@ -1,4 +1,4 @@
 <!-- Design -->
 <footer id="footer">
-    <p class="copyright">&copy; Design: <a href="https://github.com/d-asnaghi">d-asnaghi</a> and <a href="https://html5up.net">HTML5 UP</a>.</p>
+    <p class="copyright">&copy; Heimdall Intranet 2022, All Rights Reserved. <br />Not all sites operated under the Heimdall Intranet are linked here for privacy reasons. <br />To get in contact, send an email to <a href="mailto:contact@pks.ai">contact@pks.ai</a>.</p>
 </footer>
